# knockoff-factory

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  legacy.md  pyproject.toml
.github/workflows/: check-version.yaml  docker-build.yaml  python-build.yaml  python-test.yaml
examples/: films.csv  films.yaml  knockoff.yaml
knockoff/: __init__.py  cli.py  cli_v2.py  exceptions.py  io.py  knockoff.py  orm.py  testing_postgresql.py
knockoff/command/: run.py  version.py
knockoff/factory/: assembly.py  component.py  counterfeit.py  node.py  part.py  prototype.py  sink.py  source.py  table.py
knockoff/sdk/: blueprint.py  constraints.py  dag.py  db.py  table.py
knockoff/sdk/container/: default.py
knockoff/sdk/factory/: collections.py  column.py
knockoff/sdk/factory/next_strategy/: df.py  table.py
knockoff/tempdb/: __init__.py  container.py  db.py  initialize_tables.py  setup_teardown.py
knockoff/utilities/: environ.py  functools.py  importlib_utils.py  io.py  ioc.py  mixin.py  period.py  regex.py
knockoff/utilities/date/: interval.py
knockoff/utilities/orm/: sql.py  sqlalchemy_conn.py
knockoff/utilities/testing/: __init__.py  base.py  mysql.py  postgresql.py
knockoff/writer/: pandas.py
notebook/: KnockoffCLI.ipynb  KnockoffDB.ipynb  KnockoffTable.ipynb  TempDatabaseService.ipynb
tests/knockoff/: blueprint.py  conftest.py  data_model.py  test_cli_v2.py  test_knockoff.py
tests/knockoff/command/: knockoff.yaml  knockoff2.yaml  mysql-knockoff.yaml  test_run.py
tests/knockoff/factory/: test_assembly.py  test_assembly.yaml  test_cyclical_dag.yaml  test_node.py  test_source.py
tests/knockoff/sdk/: knockoff_table.py  test_blueprint.py  test_db.py  test_knockoff_table.py
tests/knockoff/sdk/factory/: test_collections.py  test_column.py
tests/knockoff/tempdb/: test_db.py
tests/knockoff/utilities/: test_environ.py  test_io.py  test_mixin.py  test_period.py
tests/knockoff/utilities/date/: test_interval.py
tests/knockoff/utilities/orm/: test_sql.py
