[tool.poetry]
name = "knockoff"
version = "4.4.1"
description = "Library for generating and bootstrapping mock data"
authors = ["Gregory Yu <gregory.yu@nike.com>"]
readme = "README.md"
repository = "https://github.com/Nike-Inc/knockoff-factory"
license = "Apache-2.0"
packages = [
  { include = "knockoff" },
]
maintainers = [
  "Mohamed Abdul Huq Ismail <Abdul.Ismail@nike.com>",
  "Mark Niedzielski <Mark.Niedzielski@nike.com>"
]


[tool.poetry.dependencies]
python = "^3.10.10"
psycopg2 = { version = "^2.9.9" }
Pyrseas = { version = "^0.10.0", optional = true }
pandas = { version = "^2.2.0" }
PyYaml = { version = "^6.0.1" }
s3fs = { version = "^2024.2.0" }
faker = { version = "^23.2.1" }
dotty_dict = { version = "^1.3.1" }
networkx = { version = "^3.2.1" }
numpy = { version = "^1.26.4" }
pyarrow = { version = "^15.0.0" }
joblib = { version = "^1.3.2" }
SQLAlchemy = { version = "^2.0.27" }
sqlalchemy-utils = { version = "^0.41.1" }
"testing.postgresql" = { version = "^1.3.0" }
dependency_injector = { version = "^4.41.0" }
PyMySQL = { version = "~1.1.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = { version = "^8.0.1" }
more-itertools = { version = "^10.2.0" }
pytest-cov = { version = "^4.1.0" }
notebook = { version = "^7.1.0" }
ipython = { version = "^8.21.0" }

[tool.poetry.extras]
mysql = ["PyMySQL"]
complete = ["Pyrseas", "PyMySQL"]

[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
knockoff = "knockoff.cli_v2:main"

[tool.poetry.plugins."knockoff.cli.command"]
"run" = "knockoff.command.run:main"
"version" = "knockoff.command.version:main"
"legacy" = "knockoff.cli:main"

[tool.poetry.plugins."knockoff.io.readers"]
"pandas.read_csv" = "pandas:read_csv"
"pandas.read_parquet" = "pandas:read_parquet"
"pandas.read_json" = "pandas:read_json"
"read_multi_parquet" = "knockoff.io:read_multi_parquet"
"inline" = "knockoff.io:read_inline"
"sql" = "knockoff.io:read_sql"

[tool.poetry.plugins."knockoff.factory.source.table.load_strategy"]
"io" = "knockoff.io:load_strategy_io"
"knockoff" = "knockoff.factory.table:load_knockoff"

[tool.poetry.plugins."knockoff.factory.sink.dump_strategy"]
"sql" = "knockoff.writer.pandas:to_sql"
"parquet" = "knockoff.writer.pandas:to_parquet"
"noop" = "knockoff.utilities.mixin:noop"

[tool.poetry.plugins."knockoff.factory.source.part.load_strategy"]
"faker" = "knockoff.factory.counterfeit:load_faker"
"cartesian-product" = "knockoff.factory.part:cartesian_product_strategy"
"inline" = "knockoff.factory.part:read_part_inline"
"concat" = "knockoff.factory.part:concat_strategy"
"period" = "knockoff.factory.part:generate_part_periods"
"io" = "knockoff.io:load_strategy_io"

[tool.poetry.plugins."knockoff.factory.source.component.load_strategy"]
"faker" = "knockoff.factory.counterfeit:load_faker_component_generator"
"knockoff" = "knockoff.utilities.mixin:noop"
"autoincrement" = "knockoff.factory.component:load_autoincrement"
"function" = "knockoff.utilities.mixin:noop"

[tool.poetry.plugins."knockoff.factory.source.prototype.load_strategy"]
"components" = "knockoff.factory.prototype:load_prototype_from_components"
"concat" = "knockoff.factory.part:concat_strategy"
"io" = "knockoff.io:load_strategy_io"

[tool.poetry.plugins."knockoff.factory.component.function"]
"numpy.random.poisson" = "numpy.random:poisson"
